--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Yeseva&family=Poppind&family=Raleway+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <title>Efix</title>
   </head>
