--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <link rel="manifest" href="/manifest.json" />
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
 
     <title>Efix</title>
   </head>
